fixing dropdown arrow miss alignment in "Search for unlinked local files" dialog

--- a/src/main/java/org/jabref/gui/Base.css
+++ b/src/main/java/org/jabref/gui/Base.css
@@ -2429,3 +2429,7 @@ journalInfo .grid-cell-b {
 #styleSelectDialog .currentStyleNameLabel {
     -fx-font-size: 1em; -fx-font-weight: bold; -fx-text-fill: -jr-theme;
 }
+
+.refresh {
+    -fx-background-color: transparent;
+}
